fix the width of the obs

--- a/fetusapp/templates/patient_tabs/history_obstetrics.html
+++ b/fetusapp/templates/patient_tabs/history_obstetrics.html
@@ -53,7 +53,7 @@
                                     <form method="POST" id="obstetricsHistoryForm" data-history-id="{{ obstetrics_history_form.id.data if obstetrics_history_form else '' }}">
                                         {{ history_obstetrics_form.hidden_tag() }}
                                         {{ history_obstetrics_form.id(type="hidden") }}
-                                        <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
+                                        <div class="col-xl-3 col-md-6 col-sm-12 px-4">
                                             <div class="row py-2">
                                                 <div class="col-12">
                                                 {% set form_elements = ['ft', 'kt', 'embrioulkia', 'te', 'ae'] %}
