--- a/fetusapp/templates/patient_tabs/history_obstetrics.html
+++ b/fetusapp/templates/patient_tabs/history_obstetrics.html
@@ -139,6 +139,8 @@
             const result = await response.json();
 
             if (result.success) {
+                // Remember the active pill before reload so we can restore it
+                try { sessionStorage.setItem('lastActiveTab', '#pills-history_obstetrics'); } catch (e) {}
                 // refresh the page
                 location.reload();
                 toggleEditMode('HistoryObstetrics');
