--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -341,7 +341,7 @@
 
     <div class="container zd py-5" style="text-align: center;">
         <div class="container justify-content-center" style="display: inline-flex; text-align: center;">
-        <ul class="nav nav-pills mb-3 bg-light p-2 secondary-nav-container" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills mb-3 bg-dark p-2 secondary-nav-container" id="pills-tab" role="tablist">
             <li class="nav-item"  role="presentation">
               <button class="nav-link active" style="border-radius: 5rem;" id="pills-history_medical-tab" data-bs-toggle="pill" data-bs-target="#pills-history_medical" type="button" role="tab" aria-controls="pills-history_medical" aria-selected="true">Ιατρικό Ιστορικό</button>
             </li>
@@ -366,15 +366,15 @@
         </ul>
         </div>
           <div class="tab-content p-3" style="text-align: left;" id="pills-tabContent">
-            <div class="tab-pane fade show active rounded-4 m-2" style="border-color: #EF539E;" id="pills-history_medical" role="tabpanel" aria-labelledby="pills-history_medical-tab" tabindex="0">
+            <div class="tab-pane fade show active rounded-4 m-2" id="pills-history_medical" role="tabpanel" aria-labelledby="pills-history_medical-tab" tabindex="0">
                 <h5 class="visually-hidden">Ιατρικό Ιστορικό</h5>
                 {% include 'patient_tabs/history_medical.html' %}
             </div>
-            <div class="tab-pane fade" id="pills-history_obstetrics" role="tabpanel" aria-labelledby="pills-history_obstetrics-tab" tabindex="0">
+            <div class="tab-pane fade rounded-4 m-2" id="pills-history_obstetrics" role="tabpanel" aria-labelledby="pills-history_obstetrics-tab" tabindex="0">
                 <h5 class="visually-hidden">Μαιευτικό Ιστορικό</h5>
                 {% include 'patient_tabs/history_obstetrics.html' %}
             </div>
-            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">
+            <div class="tab-pane fade rounded-4 m-2" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, quasi enim mollitia doloribus praesentium dolores aut nostrum atque. Eveniet praesentium mollitia, quasi quia maxime expedita impedit odit sed modi? Quisquam.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti et ipsum ratione harum ab, quia atque repellendus voluptate illo a soluta nesciunt ipsa rem necessitatibus nulla, aliquam, maxime natus nihil?
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa saepe illo ratione mollitia nobis. Impedit obcaecati itaque qui quam voluptate, iure ipsum nobis reiciendis repellendus cum quibusdam aperiam repellat dolorem!
@@ -383,7 +383,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cumque fugit vero ducimus saepe unde officiis impedit, optio quisquam ullam doloribus repellat provident sunt incidunt repudiandae dignissimos mollitia placeat perspiciatis?
                 </p>
             </div>
-            <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
+            <div class="tab-pane fade rounded-4 m-2" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
           </div>
         <button type="button" class="btn btn-outline-danger px-4" onclick="showDeleteModal()">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash3" viewBox="0 1 16 16">
@@ -529,6 +529,11 @@
 
             const data = await response.json();
             if (data.success) {
+                try {
+                    const activeBtn = document.querySelector('#pills-tab button.nav-link.active');
+                    const target = activeBtn?.getAttribute('data-bs-target');
+                    if (target) sessionStorage.setItem('lastActiveTab', target);
+                } catch (e) {}
                 location.reload();
             } else {
                 throw new Error(data.error || 'Update failed');
@@ -549,6 +554,11 @@
     }
 
     async function cancelChanges() {
+        try {
+            const activeBtn = document.querySelector('#pills-tab button.nav-link.active');
+            const target = activeBtn?.getAttribute('data-bs-target');
+            if (target) sessionStorage.setItem('lastActiveTab', target);
+        } catch (e) {}
         location.reload();
     }
 
@@ -568,6 +578,33 @@
     setupFormContainer('formContainerPersonalDetails', 'readOnlyContentPD');
     setupFormContainer('formContainerContactDetails', 'readOnlyContentCD');
     setupFormContainer('formContainerHistoryMedical', 'readOnlyContentHistoryMedical');
+    });
+
+    // Restore last active pill (tab) on load and keep it updated on change
+    document.addEventListener('DOMContentLoaded', () => {
+        try {
+            // Update sessionStorage whenever user switches pills
+            document.querySelectorAll('#pills-tab button[data-bs-toggle="pill"]').forEach(btn => {
+                btn.addEventListener('shown.bs.tab', (ev) => {
+                    const target = ev.target?.getAttribute('data-bs-target');
+                    if (target) {
+                        sessionStorage.setItem('lastActiveTab', target);
+                    }
+                });
+            });
+
+            // On load, activate the stored pill if present
+            const last = sessionStorage.getItem('lastActiveTab');
+            if (last) {
+                const trigger = document.querySelector(`#pills-tab button[data-bs-target="${last}"]`);
+                if (trigger && !trigger.classList.contains('active')) {
+                    const tab = new bootstrap.Tab(trigger);
+                    tab.show();
+                }
+            }
+        } catch (e) {
+            // no-op
+        }
     });
 </script>
 
