--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -116,10 +116,13 @@ h2, h5 {
     color: var(--vibrant-pink);
 }
 
-.nav-link {
+/* .nav-pills .nav-link {
+    color: #212529;
+} */
+.nav-pills .nav-link {
     color: rgba(255, 255, 255, .55);
 }
-.nav-link:hover {
+.nav-pills .nav-link:hover {
     color: rgba(255, 255, 255, .85);
 }
 
@@ -229,7 +232,7 @@ footer a:hover{
     display: inline-flex;
     flex-wrap: nowrap;
     overflow-x: auto;
-    box-shadow: inset 1px 1px 0.2rem black;
+    box-shadow: inset 3px 3px 1rem black;
     overflow-x: auto;
     padding: 10px;
     margin: 0;
@@ -316,10 +319,6 @@ footer a:hover{
     background-color: var(--vibrant-pink);
     border-color: var(--vibrant-pink);
 }
-
-/* .nav-pills .nav-link {
-    color: #212529;
-} */
 
 /* .bg-light {
     background-color: #F3E1D7 !important;
