--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -341,7 +341,7 @@
 
     <div class="container zd py-5" style="text-align: center;">
         <div class="container justify-content-center" style="display: inline-flex; text-align: center;">
-        <ul class="nav nav-pills mb-3 bg-dark p-2 secondary-nav-container" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills mb-3 p-2 secondary-nav-container bg-dark" id="pills-tab" role="tablist">
             <li class="nav-item"  role="presentation">
               <button class="nav-link active" style="border-radius: 5rem;" id="pills-history_medical-tab" data-bs-toggle="pill" data-bs-target="#pills-history_medical" type="button" role="tab" aria-controls="pills-history_medical" aria-selected="true">Ιατρικό Ιστορικό</button>
             </li>
