--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -437,7 +437,7 @@ em {
     border-color: var(--vibrant-pink);
 }
 
-.card{
+#readOnlyContentHistoryObstetrics .card{
     background-color: rgba(255, 255, 255, 0.05);
 }
 
