--- a/fetusapp/templates/patient_tabs/history_obstetrics.html
+++ b/fetusapp/templates/patient_tabs/history_obstetrics.html
@@ -131,6 +131,122 @@
         </div>
     </div>
 </div>
+
+{% if history_obstetrics_x_form and history_obstetrics_x_form.entries %}
+    {% for entry_form in history_obstetrics_x_form.entries %}
+    <div class="obstetrics-history-entry">
+        <h5>Entry {{ loop.index }}</h5>
+        <!-- <p><strong>Year of Birth:</strong> {{ entry_form.year_of_birth }}</p>
+        <p><strong>Birth Type:</strong> {{ entry_form.birth_type }}</p>
+        <p><strong>Baby Weight:</strong> {{ entry_form.baby_weight }}</p>
+        <p><strong>Gestation Week:</strong> {{ entry_form.gestation_week }}</p>
+        <p><strong>Complications Notes:</strong> {{ entry_form.complications_notes }}</p> -->
+    </div>
+    <div class="col-12">
+    <div class="card card-cover inherit-text-color bg-transparent rounded-4 shadow-lg">
+        <div class="d-flex flex-column h-100 text-shadow-1">
+
+            <!-- New content with slider card -->
+            <div class="container px-0 ">
+                <div class="form-container" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainerHistoryObstetrics">
+                    {% if entry_form %}
+                        <div class="read-only read-only-labels p-4" id="readOnlyContentHistoryObstetrics">
+                            <div class="row g-3 py-2">
+                                {% set form_elements = ['year_of_birth', 'birth_type', 'baby_weight', 'gestation_week', 'complications_notes'] %}
+
+                                {% for element in form_elements %}
+                                    {% set field = getattr(entry_form, element) %}
+                                    {{ macros.render_field(field.label.text, field.data) }}
+                                {% endfor %}
+
+                            </div>
+                            <div class="d-flex flex-wrap justify-content-end gap-2 mt-3">
+                                <button type="button" class="btn btn-outline-secondary px-4" data-edit-button="true" onclick="toggleEditMode('HistoryObstetrics')">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 1 16 16">
+                                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                                    </svg>
+                                    Επεξεργασία
+                                </button>
+                                <button type="button" class="btn btn-outline-danger px-4" onclick="showDeleteObstetricsHistoryModal()">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash3" viewBox="0 1 16 16">
+                                        <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    {% else %}
+                        <div class="read-only read-only-labels p-4" id="readOnlyContentHistoryObstetrics">
+                            <p>Δεν υπάρχει καταγεγραμμένο μαιευτικό ιστορικό για τον ασθενή {{ patient.first_name | proper_case }} {{ patient.last_name | proper_case }}. Για να δημιουργήσετε νέο μαιευτικό ιστορικό, παρακαλώ πατήστε το κουμπί παρακάτω.</p>
+                            <button type="button" class="btn btn-outline-secondary px-4" data-edit-button="true" onclick="toggleEditMode('HistoryObstetrics')">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 1 16 16">
+                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                                </svg>
+                                Δημιουργία Νέου Μαιευτικού Ιστορικού
+                            </button>
+                        </div>
+                    {% endif %}
+                    <div class="editable card card-cover rounded-4 shadow-lg" id="editableContentHistoryObstetrics" style="display: none;">
+                        <div class="d-flex flex-column p-3 text-shadow-1">
+                            <div class="wrapper">
+                                <div class="form-wrapper patient-lite px-2">
+                                    <form method="POST" id="obstetricsHistoryForm" data-history-id="{{ obstetrics_history_form.id.data if obstetrics_history_form else '' }}">
+                                        {{ history_obstetrics_form.hidden_tag() }}
+                                        {{ history_obstetrics_form.id(type="hidden") }}
+                                        <div class="col-xl-3 col-md-6 col-sm-12 px-4">
+                                            <div class="row py-2">
+                                                <div class="col-12">
+                                                {% set form_elements = ['ft', 'kt', 'embrioulkia', 'te', 'ae'] %}
+
+                                                {% for element in form_elements %}
+                                                    {% set field = getattr(history_obstetrics_form, element) %}
+                                                    {% if field.type != 'HiddenField' %}
+                                                        {{ macros.input_group(field.name, {'type': field.type, 'label': field.label.text}, field.data) }}
+                                                    {% endif %}
+                                                {% endfor %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
+                                            <button type="button" class="btn login-btn px-4" onclick="saveChangesHistoryObstetrics()">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-floppy" viewBox="0 1 16 16">
+                                                    <path d="M11 2H9v3h2z"/>
+                                                    <path d="M1.5 0h11.586a1.5 1.5 0 0 1 1.06.44l1.415 1.414A1.5 1.5 0 0 1 16 2.914V14.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 14.5v-13A1.5 1.5 0 0 1 1.5 0M1 1.5v13a.5.5 0 0 0 .5.5H2v-4.5A1.5 1.5 0 0 1 3.5 9h9a1.5 1.5 0 0 1 1.5 1.5V15h.5a.5.5 0 0 0 .5-.5V2.914a.5.5 0 0 0-.146-.353l-1.415-1.415A.5.5 0 0 0 13.086 1H13v4.5A1.5 1.5 0 0 1 11.5 7h-7A1.5 1.5 0 0 1 3 5.5V1H1.5a.5.5 0 0 0-.5.5m3 4a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5V1H4zM3 15h10v-4.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5z"/>
+                                                </svg>
+                                                Αποθήκευση
+                                            </button>
+                                            <button type="button" class="btn btn-outline-secondary px-4" onclick="cancelChanges()">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 1 16 16">
+                                                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                                                </svg>
+                                                Ακύρωση
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    {% endfor %}
+{% else %}
+<div class="read-only read-only-labels p-4" id="readOnlyContentHistoryObstetrics">
+    <p>Δεν υπάρχει καταγεγραμμένο μαιευτικό ιστορικό για τον ασθενή {{ patient.first_name | proper_case }} {{ patient.last_name | proper_case }}. Για να δημιουργήσετε νέο μαιευτικό ιστορικό, παρακαλώ πατήστε το κουμπί παρακάτω.</p>
+    <button type="button" class="btn btn-outline-secondary px-4" data-edit-button="true" onclick="toggleEditMode('HistoryObstetrics')">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 1 16 16">
+            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+        </svg>
+        Δημιουργία Νέου Μαιευτικού Ιστορικού
+    </button>
+</div>
+{% endif %}
 {% block tab_javascript %}
 <script>
 
