--- a/fetusapp/templates/patient_tabs/history_obstetrics.html
+++ b/fetusapp/templates/patient_tabs/history_obstetrics.html
@@ -118,21 +118,32 @@
     </div>
 </div>
 
+<div class="read-only read-only-labels pt-3 zd d-flex justify-content-end" id="readOnlyContentHistoryObstetrics">
+    <button type="button" class="btn btn-outline-secondary px-4 ms-auto" data-edit-button="true" onclick="toggleEditMode('HistoryObstetrics')">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+        </svg>
+    </button>
+</div>
+
 {% if history_obstetrics_x_form and history_obstetrics_x_form.entries %}
+<div class="row pt-3 g-3" id="obstetricsHistoryEntries">
     {% for entry_form in history_obstetrics_x_form.entries %}
         {% set prefix = 'HistoryObstetricsX_' ~ loop.index %}
-        <div class="obstetrics-history-entry" id="entryWrapper{{ prefix }}">
-            <h5>Entry {{ loop.index }}</h5>
-        </div>
-        <div class="col-12" id="col{{ prefix }}">
+        <div class="col-12 col-lg-6 obstetrics-history-entry" id="entryWrapper{{ prefix }}">
             <div class="card card-cover inherit-text-color bg-transparent rounded-4 shadow-lg" id="card{{ prefix }}">
                 <div class="d-flex flex-column h-100 text-shadow-1">
                     <div class="container px-0 ">
                         <div class="form-container" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainer{{ prefix }}">
+                            <!-- Read Only View -->
                             <div class="read-only read-only-labels p-4" id="readOnlyContent{{ prefix }}">
                                 <div class="row py-2">
                                     <div class="col-12">
-                                        {% set form_elements = ['year_of_birth', 'birth_type', 'baby_weight', 'gestation_week', 'complications_notes'] %}
+                                        <div class="text-center">
+                                            <div class="fs-1 fw-semibold">{{ getattr(entry_form, 'year_of_birth').data }}</div>
+                                        </div>
+                                        {% set form_elements = ['birth_type', 'baby_weight', 'gestation_week', 'complications_notes'] %}
                                         {% for element in form_elements %}
                                             {% set field = getattr(entry_form, element) %}
                                             {{ macros.render_field(field.label, field.data, field.type) }}
@@ -149,6 +160,7 @@
                                     </button>
                                 </div>
                             </div>
+                            <!-- Editable View -->
                             <div class="editable card card-cover rounded-4 shadow-lg" id="editableContent{{ prefix }}" style="display: none;">
                                 <div class="d-flex flex-column p-3 text-shadow-1">
                                     <div class="wrapper">
@@ -196,13 +208,8 @@
             </div>
         </div>
     {% endfor %}
-{% endif %}
-<div class="read-only read-only-labels p-4" id="readOnlyContentHistoryObstetrics">
-    <button type="button" class="btn btn-outline-secondary px-4" data-edit-button="true" onclick="toggleEditMode('HistoryObstetrics')">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="1 0 16 16"><path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/><path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/></svg>
-        Δημιουργία Νέας Εγγραφής
-    </button>
 </div>
+{% endif %}
 
 {% block tab_javascript %}
 <script>
