start edit the x records

--- a/fetusapp/templates/patient_tabs/history_obstetrics.html
+++ b/fetusapp/templates/patient_tabs/history_obstetrics.html
@@ -172,7 +172,7 @@
                                             <form method="POST" id="obstetricsHistoryForm{{ prefix }}" data-history-id="{{ obstetrics_history_form.id.data if obstetrics_history_form else '' }}">
                                                 {{ history_obstetrics_form.hidden_tag() }}
                                                 {{ entry_form.form.id(type='hidden') }}
-                                                {{ entry_form.form.id.data }}
+                                                <!-- {{ entry_form.form.id.data }} -->
                                                 <div class="col-12">
                                                     <div class="row py-2">
                                                         <div class="col-12">
