--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -9,7 +9,7 @@
     --vibrant-pink: #EF539E;          /* Active state color for nav link */
     --vibrant-pink: #ff4f40;          /* monzo*/
     --vibrant-pink: #9FE870;          /* wise*/
-    --vibrant-pink: #EF539E;          /* monzo*/
+    --vibrant-pink: #efb853;          /* monzo*/
     --warm-beige: #F3E1D7;            /* Background color */
     /* Match root background to body to avoid black gutter */
     background-color: #212529;
