--- a/fetusapp/templates/patient_tabs/history_obstetrics.html
+++ b/fetusapp/templates/patient_tabs/history_obstetrics.html
@@ -121,8 +121,9 @@
     </div>
 </div>
 
+
 <div class="read-only read-only-labels pt-3 zd d-flex justify-content-end" id="readOnlyContentHistoryObstetrics">
-    <button type="button" class="btn btn-outline-secondary px-4 ms-auto" data-edit-button="true" onclick="toggleEditMode('HistoryObstetrics')">
+    <button type="button" class="btn btn-outline-secondary px-4 ms-auto" data-edit-button="true" onclick="toggleEditMode('HistoryObstetricsX_new')">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-plus-square" viewBox="0 1 16 16">
             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
