migrate pregnencies data

--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -349,7 +349,7 @@
               <button class="nav-link" style="border-radius: 5rem;" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-history_obstetrics" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Μαιευτικό Ιστορικό</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" style="border-radius: 5rem;" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Κύηση</button>
+              <button class="nav-link" style="border-radius: 5rem;" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Κυήσεις</button>
             </li>
             <li class="nav-item" role="presentation">
               <button class="nav-link" style="border-radius: 5rem;" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Γυναικολογικό Ιστορικό</button>
